[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoare"
authors = [
    {name = 'C. W. Fairall'},
    {name = 'Byron Blomquist'},
    {name = 'Ludovic Bariteau'},
    {name = 'J. B. Edson'}
]
maintainers = [
    {name = 'Andrew Scherer', email = 'scherand@oregonstate.edu'}
]
version = "2023.4a2"
description = 'A Python implementation of the COARE bulk air-sea flux algorithm.'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.7"
keywords = ['oceanography', 'air-sea', 'bulk flux']
license = {text = "MIT License"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
    'Intended Audience :: Science/Research'
]
dependencies = ['numpy']



